web/styles/modal.css
/* ... */
#demo_organization_add_email_form {
    margin-bottom: 0;

    .input-group {
        margin-bottom: 0.3125em; /* 5px at 16px/1em */
    }

    .input-group:last-of-type {
        margin-bottom: 0;
    }
}

#create_bot_form {
    margin-bottom: 0;

    .input-group:last-of-type {
        margin-bottom: 0;
    }
}

#start-export-modal #start-export-form {
    margin-bottom: 0;
}

#edit-linkifier-form {
    .linkifier-edit-form,
    .input-group:last-of-type {
        margin-bottom: 0;
    }
}

.deleted-profile-field-options-list {
    margin-bottom: 0;
}

.confirm-unsubscribe-private-stream-content {
    display: flex;
    flex-direction: column;
    gap: 0.625em; /* 10px at 16px/1em */
}

#first_stream_created_modal .first-stream-created-instructions-list {
    margin-bottom: 0;
}

#confirm_mark_messages_as_read_modal .input-group:last-of-type {
    margin-bottom: 0;
}

#change_user_group_name {
    margin-bottom: 0;
}

